_css/components.css
/* ... */
.boids__control {
  min-height: 32px;
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-areas:
    "label output"
    "input input";
}

.boids__control--random {
  @media (max-width: calc(600 / 16 * 1rem)) {
    order: -1;
    margin-bottom: 8px;
  }
}

.boids__control-label {
  grid-area: label;
}

.boids__control-output {
  grid-area: output;
}

.boids__control-input {
  grid-area: input;
}

.boids__control-input--slider {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  width: 100%;

  &::-webkit-slider-runnable-track {
    background: var(--color-text);
    border-radius: 100vmax;
    height: 3px;

    background: linear-gradient(
      to right,
      color-mix(in srgb, var(--color-text) 50%, transparent) var(--progress, 0%),
      var(--color-text) var(--progress, 0%)
    );
  }
  &::-moz-range-track {
    background: var(--color-text);
    border-radius: 100vmax;
    height: 3px;
  }
  &::-moz-range-progress {
    background: color-mix(in srgb, var(--color-background) 50%, transparent);
  }

  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    margin-top: -8.5px;
    width: 20px;
    height: 20px;
    background: var(--color-background);
    border: none;
    border-radius: 10px;
    box-shadow: 0 2px 8px var(--color-grey300);
    cursor: grab;
  }
  &::-moz-range-thumb {
    width: 20px;
    height: 20px;
    background: var(--color-background);
    border: none;
    border-radius: 10px;
    box-shadow: 0 2px 8px var(--color-grey300);
    cursor: grab;
  }

  &::-webkit-slider-thumb:hover {
    filter: contrast(1.2);
  }
  &::-moz-range-thumb:hover {
    filter: contrast(1.2);
  }

  &:active::-webkit-slider-thumb {
    cursor: grabbing;
    outline: none;
    box-shadow: 0 0 0 3px var(--color-primary);
  }
  &:active::-moz-range-thumb {
    cursor: grabbing;
    outline: none;
    box-shadow: 0 0 0 3px var(--color-primary);
  }

  &:active {
    cursor: grabbing;
  }
}

.boids__control-input--dropdown {
  grid-area: output;
  background: var(--color-background);
  color: var(--color-text);
  border: 1px solid var(--color-text);
  border-radius: 4px;
  padding: 0px 8px;

  @media (max-width: calc(600 / 16 * 1rem)) {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

.boids__control-input--checkbox {
  width: 18px;
  height: 18px;
  margin-top: 6px;
  accent-color: var(--color-text);
}

.button-link.boids__control-input--random {
  @media (max-width: calc(1000 / 16 * 1rem)) {
    padding-top: 0px;
    padding-bottom: 0px;
  }

  @media (max-width: calc(600 / 16 * 1rem)) {
    grid-column: 1 / -1;
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

.boids__icon {
  display: inline;
  vertical-align: center;
  width: 16px;
  height: 16px;
  margin-bottom: -1px;
}

.footer {
  margin-top: 128px;
  padding-bottom: 32px;
  width: 100%;
  border-top: 2px solid var(--color-grey300);
  display: flex;
  justify-content: space-between;
  font-size: calc(20 / 16 * 1rem);
  font-weight: var(--weight-regular);
  color: var(--color-grey300);

  @media (max-width: calc(1000 / 16 * 1rem)) {
    padding-bottom: 16px;
    margin-top: 96px;
    justify-content: space-around;
  }

  @media (max-width: calc(600 / 16 * 1rem)) {
    margin-top: 64px;
    flex-direction: column;
    align-items: flex-start;
    gap: 32px;
  }
}

.footer__icons {
  padding-top: 16px;
  display: flex;
  gap: 16px;

  @media (max-width: calc(1000 / 16 * 1rem)) {
    flex-direction: column;
  }
}

.footer__link {
  display: flex;
  gap: 6px;
  text-decoration: none;
  color: inherit;
  transition: color 250ms;

  &:hover {
    color: var(--color-grey700);
    transform: scaleY(1.01);
    transition:
      color 100ms,
      transform 100ms;
  }

  &:hover .footer__icon {
    transition: transform 200ms;
    transform: scale(1.02) translateY(-1px);
    transition-delay: 50ms;
  }
}

.footer__icon {
  width: 28px;
  height: 28px;
  transition: transform 300ms;
}

.footer__icon--wave {
  position: relative;
  margin-right: 2px;
  top: -1px;
}

.footer__icon--axe {
  position: relative;
  top: -6px;
  margin-right: -3px;
  width: 38px;
  height: 38px;
}

.footer__icon--github {
  position: relative;
  top: -2px;
  width: 32px;
  height: 32px;
}

